# gdc-models

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .secrets.baseline  .travis.yml  Jenkinsfile  MANIFEST.in  README.md  blacklist.yml  dev-requirements.in  dev-requirements.txt  docker-compose-ci.yaml  init_index.py  model.yaml  pyproject.toml  requirements-sync.txt  requirements.txt  setup.cfg  setup.py  setup.sh  tox.ini
es-models/case_centric/: case_centric.mapping.yaml  settings.yaml
es-models/case_for_cnv_joins_centric/: case_for_cnv_joins_centric.mapping.yaml
es-models/case_for_ssm_joins_centric/: case_for_ssm_joins.mapping.yaml  case_for_ssm_joins_centric.mapping.yaml
es-models/case_set/: case_set.mapping.yaml
es-models/cna_centric/: cna_centric.mapping.yaml
es-models/cna_occurrence_centric/: cna_occurrence_centric.mapping.yaml
es-models/cnv_centric/: cnv_centric.mapping.yaml
es-models/cnv_occurrence_centric/: cnv_occurrence_centric.mapping.yaml
es-models/file_set/: file_set.mapping.yaml  settings.yaml
es-models/gdc_from_graph/: annotation.mapping.yaml  case.mapping.yaml  case.obsolete.mapping.yaml  definitions.yaml  descriptions.yaml  file.mapping.yaml  file.obsolete.mapping.yaml  file_definitions.yaml  project.mapping.yaml  settings.yaml
es-models/gdc_legacy_graph/: annotation.mapping.yaml  case.mapping.yaml  descriptions.yaml  file.mapping.yaml  project.mapping.yaml  settings.yaml
es-models/gene_centric/: gene_centric.mapping.yaml  settings.yaml
es-models/gene_expression/: gene_expression.mapping.yaml  settings.yaml
es-models/gene_for_joins_centric/: gene_for_joins_centric.mapping.yaml
es-models/gene_set/: gene_set.mapping.yaml
es-models/score_centric/: score_centric.mapping.yaml
es-models/ssm_centric/: settings.yaml  ssm_centric.mapping.yaml
es-models/ssm_flat/: ssm_flat.yaml
es-models/ssm_occurrence_centric/: settings.yaml  ssm_occurrence_centric.mapping.yaml
es-models/ssm_score_centric/: ssm_score_centric.mapping.yaml
es-models/ssm_set/: ssm_set.mapping.yaml
gdcmodels/: __init__.py  es-models  esutils.py  force_merge_indices.py  force_merge_segements.py  init_index.py
gdcmodels/es-models/cnv_centric/: cnv_centric.mapping.yaml
gdcmodels/es-models/gdc_from_graph/: file.mapping.yaml  project.mapping.yaml
gdcmodels/es-models/gdc_legacy_graph/: descriptions.yaml  file.mapping.yaml
gdcmodels/es-models/gene_expression/: settings.yaml
gdcmodels/es-models/gene_set/: settings.yaml
gdcmodels/es-models/ssm_centric/: ssm_centric.mapping.yaml
gdcmodels/services/: force_merge_service.py
scripts/: add_fields.py  add_fields_indexer.py  format_yaml.sh
scripts/git-hooks/: pre-commit
src/gdcmodels/: __init__.py  es-models  esutils.py  extraction.py  extraction_utils.py  force_merge_indices.py  init_index.py  mapper.py  mapping_utils.py  utils.py
src/gdcmodels/common/: mapping.yaml  settings.yaml
src/gdcmodels/es-models/case_centric/: mapping.yaml
src/gdcmodels/es-models/case_set/: settings.yaml
src/gdcmodels/es-models/cnv_centric/: mapping.yaml
src/gdcmodels/es-models/cnv_occurrence_centric/: cnv_occurrence_centric.mapping.yaml  mapping.yaml
src/gdcmodels/es-models/file_set/: file_set.mapping.yaml
src/gdcmodels/es-models/gdc_from_graph/: descriptions.yaml
src/gdcmodels/es-models/gdc_legacy_graph/: settings.yaml
src/gdcmodels/es-models/gene_centric/: mapping.yaml
src/gdcmodels/es-models/gene_expression/: gene_expression.mapping.yaml  mapping.yaml  settings.yaml
src/gdcmodels/es-models/gene_set/: gene_set.mapping.yaml  mapping.yaml
src/gdcmodels/es-models/ssm_centric/: mapping.yaml  settings.yaml
src/gdcmodels/es-models/ssm_occurrence_centric/: mapping.yaml
src/gdcmodels/esmodels/: __init__.py  models.py
src/gdcmodels/esmodels/case_centric/: mapping.yaml  settings.yaml
src/gdcmodels/esmodels/cnv_centric/: mapping.yaml  settings.yaml
src/gdcmodels/esmodels/cnv_occurrence_centric/: mapping.yaml
src/gdcmodels/esmodels/gdc_from_graph/: descriptions.yaml  settings.yaml
src/gdcmodels/esmodels/gene_centric/: mapping.yaml
src/gdcmodels/esmodels/gene_expression/: mapping.yaml  settings.yaml
src/gdcmodels/esmodels/ssm_centric/: mapping.yaml
src/gdcmodels/esmodels/ssm_occurrence_centric/: mapping.yaml
src/gdcmodels/export/: __main__.py  cli.py  common.py  normalizer.py  viz.py
src/gdcmodels/export/graph/: __init__.py  annotation.py  case.py  common.py  file.py  project.py
src/gdcmodels/sync/: __main__.py  cli.py  common.py  gene_expression.py  viz.py
src/gdcmodels/sync/graph/: __init__.py  annotation.py  case.py  common.py  file.py  (+1 more)
test-reports/: results.xml
tests/: conftest.py  models_dsl.py  test_dsls.py  test_es_models.py  test_export.py  test_force_merge_service.py  test_init_index.py  test_mapper.py  test_mapping_utils.py  test_sync.py  utils.py
tests/data/mapper/: mapping.yaml
tests/export/: test_normalizer.py
(+12 files in other folders)
