[tool.poetry]
authors = ["Your Name <you@example.com>"]
description = "A collection of models reflecting the data stored in the GDC"
include = ["gdcmodels/es-models/**/*.yaml"]
license = "Apache-2.0"
name = "gdcmodels"
version = "0.0.0"

[tool.poetry.scripts]
init_index = "gdcmodels.init_index:main"

[tool.poetry.dependencies]
PyYAML = "^6.0"
elasticsearch = "<8.0.0"
python = "^3.6"

[tool.poetry.dev-dependencies]
coverage = [
    {version="^6.2.0", python="^3.6"},
    {version="^6.4.0", python="^3.7"}
]
more-itertools = "^8.13.0"
pre-commit = "^2.0.0"
pytest = "^7.0.0"

[tool.poetry-dynamic-versioning]
dirty = true
enable = true
metadata = true
pattern = "default-unprefixed"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning"]
