[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm", "setuptools_git_versioning<2"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 98
include = '\.pyi?$'

[tool.coverage.html]
title = "gdc-models coverage report"
directory = "docs/htmlcov"
show_contexts = true

[tool.coverage.run]
branch = true
context = "unit tests"
source = ["gdcmodels"]

[tool.isort]
profile = "black"
line_length = 98              # match black config
known_first_party = ["gdcmodels"]

[tool.setuptools_scm]
local_scheme = "dirty-tag"
fallback_version = "local"
