[metadata]
name = gdcmodels
description = "Stores and serves GDC data models defined in static YAML files.
long_description = file: README.md
long_description_content_type = text/markdown
author = NCI GDC
author_email = gdc_dev_questions-aaaaae2lhsbell56tlvh3upgoq@cdis.slack.com
license = Apache Software License 2.0
license_file = LICENSE
url = https://github.com/NCI-GDC/gdcdatamodel2
keywords = python3 gdcdatamodels gdcdictionary plaster
classifiers =
    Intended Audience :: Developers
    Programming Language :: Python
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: PythonLicense :: OSI Approved :: Apache Software License
    Topic :: Software Development :: Libraries :: Python Modules

[options]
zip_safe = True
packages = find:
package_dir =
    =gdcmodels
python_requires = >=3.7
include_package_data = True
install_requires =
    PyYAML
    elasticsearch>=7.0.0,<8.0.0
    deepdiff~=6.5
    mergedeep~=1.3


[options.packages.find]
where = src
exclude =
    scripts
    *-models
    tests

[options.package_data]
gdcmodels =
    es-models/*/*.yaml

[options.extras_require]
dev =
    elasticsearch-dsl~=7.4
    pytest~=7.0
    pytest-cov~=4.0


[options.entry_points]
console_scripts =
    init_index = gdcmodels.init_index:main
