[metadata]
name = gdcmodels
description = "Stores and serves GDC data models defined in static YAML files.
long_description = file: README.md
long_description_content_type = text/markdown
author = NCI GDC
author_email = gdc_dev_questions-aaaaae2lhsbell56tlvh3upgoq@cdis.slack.com
license = Apache Software License 2.0
license_file = LICENSE
url = https://github.com/NCI-GDC/gdc-models
keywords = python3 gdcmodels yaml
classifiers =
    Intended Audience :: Developers
    Programming Language :: Python
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: PythonLicense :: OSI Approved :: Apache Software License
    Topic :: Software Development :: Libraries :: Python Modules

[options]
zip_safe = True
packages = find:
package_dir =
    =src
python_requires = >=3.8
include_package_data = True
install_requires =
    deepdiff~=6.5
    elasticsearch>=7.0.0,<8.0.0
    importlib-resources;python_version<'3.9'
    mergedeep~=1.3
    PyYAML
    typing-extensions

[options.packages.find]
where = src
exclude =
    scripts
    *-models
    tests

[options.extras_require]
dev =
    coverage
    elasticsearch-dsl~=7.4
    pytest

[options.entry_points]
console_scripts =
    init_index = gdcmodels.init_index:main
